k8s-manifests/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: op-api
  labels:
    app: opadi-api
spec:
  selector:
    app: opadi-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
